--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,33 @@ body {
     letter-spacing: 2px;
 }
 
+
+.introduction-card {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    opacity: 0.9; /* Set the opacity */
+    cursor: move; /* Set the cursor style to indicate draggability */
+    position: absolute; /* Position the card absolutely for draggable behavior */
+    left: 50%;
+    top: 80%; /* Adjust the initial position to start below the text */
+    transform: translate(-50%, -50%);
+}
+
+.introduction-card h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.introduction-card p {
+    font-size: 1rem;
+    color: #666666;
+}
+
 @keyframes fade {
     0%, 100% {
         opacity: 0;
